<resources>
    <string name="app_name">HopIn</string>
    <string name="email">email: </string>
    <string name="next">Next</string>
    <string name="live">Live</string>
    <string name="panic">PANIC</string>
    <string name="emailExmp">example@gmail.com </string>
    <string name="password">password</string>
    <string name="loginBtn">Log in</string>
    <string name="logOutBtn">Log out</string>
    <string name="welcome">Welcome!</string>
    <string name="register">Register</string>
    <string name="accountBtn">Account</string>
    <string name="inboxBtn">Inbox</string>
    <string name="driver">Driver</string>
    <string name="driverAccountTitle">Account</string>
    <string name="driverAccountName">Nikola Savic</string>
    <string name="accountSettingsBtn">account settings</string>
    <string name="statisticsBtn">statistics</string>
    <string name="reportsBtn">reports</string>\
    <string name="contactInfo">Contact info  </string>
    <string name="telephone">phone number: </string>
    <string name="telephoneExmp">0633324561</string>
    <string name="locationInfo">Location info</string>
    <string name="address">address: </string>
    <string name="street">street: </string>
    <string name="cityExmp">Novi Sad</string>
    <string name="houseNumber">house number: </string>
    <string name="streetExmp">Bulevar oslobodjenja</string>
    <string name="houseNumberExmp">5/1</string>
    <string name="vehicleInfo">Vehicle info</string>
    <string name="model">model: </string>
    <string name="regPlatesExmp">K61-A-435</string>
    <string name="regPlates">reg plates: </string>
    <string name="modelExmp">Ford mustang</string>
    <string name="confirm">Confirm</string>
    <string name="asap">asap</string>
    <string name="slogan">Safe. Quick. Pleasant.</string>
    <string name="company_name">HopIn.</string>
    <string name="registerTitle">Create account</string>
    <string name="inputName">Name</string>
    <string name="inputSurname">Surname</string>
    <string name="inputEmail">Email</string>
    <string name="inputPassword">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="inputCity">City</string>
    <string name="inputPhone">Telephone</string>
    <string name="inputAreaNum">+381</string>
    <string name="inbox_nav">Inbox</string>
    <string name="home_nav">Home</string>
    <string name="profile_nav">Profile</string>
    <string name="history_nav">History</string>
    <string name="driverStatisticsTitle">Statistics</string>
    <string name="day">DAY</string>
    <string name="month">MONTH</string>
    <string name="year">YEAR</string>
    <string name="driverStatisticsName">Hey, Nikola</string>
    <string name="youWorked">You worked</string>
    <string name="hours">56h</string>
    <string name="total">Total</string>
    <string name="accountSettingsTitle">account settings</string>
    <string name="inputCCard">Credit Card</string>
    <string name="changePassword">change password</string>
    <string name="changePaymentInfo">change payment info</string>
    <string name="save">Save</string>
    <string name="loginTitle">Welcome back!</string>
    <string name="forgottenPassword">Forgot password?</string>
    <string name="noAccount">New and wanna hop in?</string>
    <string name="active">active</string>
    <string name="aroundYou">Around you</string>
    <string name="current_ride">Current ride</string>
    <string name="set_destination">Set destination</string>
    <string name="tell_us">Tell us about the ride:</string>
    <string name="pick_up">Pick up location</string>
    <string name="where_to">Where to?</string>
    <string name="pick_up_time">Pick up time</string>
    <string name="later">Schedule for later</string>
    <string name="add_stops">add in-between stops</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New password</string>
    <string name="passwordSettings">Password settings</string>
    <string name="paymentInfo">Payment info</string>
    <string name="nameOnCard">Name on card</string>
    <string name="cardNumber">Card number</string>
    <string name="MM">MM</string>
    <string name="YY">YY</string>
    <string name="CVC">CVC</string>
    <string name="acceptanceRideTitle">Wanna go for a ride?</string>
    <string name="acceptanceRidePickUp">Pick up location: </string>
    <string name="acceptanceRideDestination">Destination: </string>
    <string name="acceptanceRideDuration">Duration: </string>
    <string name="acceptanceRideDistance">Distance: </string>
    <string name="acceptanceRidePassengers">Passengers: </string>
    <string name="acceptanceRidePrice">Price(RSD): </string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="routeCities">Novi Sad to Belgrade</string>
    <string name="routeDistance">distance: </string>
    <string name="routeStops">stops: / </string>
    <string name="timeExmp">00:05:45</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="reportsParams">Report criteria:</string>
    <string name="reportsGreeting">Hey, Grace</string>
    <string name="reportsSubtitle">Here are your stats:</string>
    <string name="chooseDate">Choose date</string>
    <string name="endDate">End date:</string>
    <string name="card">card:</string>
    <string name="cardType">card type:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="totalKm">120km</string>
    <string name="avgKm">30km</string>
    <string name="noReports">Looks like there\'s no reports for the chosen date(s)</string>
    <string name="rideDate">Date: 15.12.2021.</string>
    <string name="userName">Grace Collins</string>
    <string name="userEmail">email: grace@gmail.com</string>
    <string name="userTelephone">contact: +3816572193</string>
    <string name="driverName">Mark Jackson</string>
    <string name="showDetails">Show details</string>
    <string name="ratingsSubtitle">Reviews</string>
    <string name="passengersSubtitle">Passengers</string>
    <string name="inconsistent">driver inconsistent</string>
    <string name="send">Send</string>
    <string name="car">Car</string>
    <string name="back">Back</string>
    <string name="van">Van</string>
    <string name="luxury_car">Luxury Car</string>
    <string name="special_guests">Any special guests?</string>
    <string name="riding_with_baby">Riding with a baby</string>
    <string name="riding_with_pet">Riding with a pet</string>
    <string name="ride_settings_title">What\'s your vehicle type?</string>
    <string name="invite_others_title">Anyone else riding with you?</string>
    <string name="invite_sent">Invites will be sent to:</string>
    <string name="declineReasonTitle">Choose reason for declining</string>
    <string name="reasonPassengers">Passengers haven\'t come</string>
    <string name="reasonFamily">Family problems</string>
    <string name="other">Other</string>
    <string name="enterOther">Enter other reason:</string>
    <string name="submit">Submit</string>
    <string name="passengerDetailsTitle">Passengers on ride</string>
    <string name="driverDetailsTitle">Driver\'s info</string>
    <string name="logOutTitle">Are you sure you want to log out?</string>
    <string name="orderAgainTitle">HopIn this ride again?</string>
    <string name="orderAgainSubitle">You are about to create a new ride</string>
    <string name="orderAgainSubitle2">using these locations from your favourites:</string>
    <string name="cancel">Cancel</string>
    <string name="timeError">Schedule max 5h in advance.</string>
    <string name="oops">Ooops</string>
    <string name="why">Panic reason?</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it? It\'s necessary to enable full map functionalities!</string>
    <string name="enable">Enable</string>
    <string name="no">No, thank you</string>
    <string name="api_key">AIzaSyADf7wmEupGmb08OGVJR1eNhvtvF6KYuiM</string>

    <string name="panicTitle">Tell us about the PANIC reason?</string>
    <string name="sendPanic">Notify Support</string>
    <string name="reasonHint">Reason...</string>
    <string name="succPanic">Panic notification successfully sent!</string>
    <string name="failPanic">Panic notification failed to send!</string>
    <string name="finishedAlert">Great work :)</string>
    <string name="finishedAlertContent">Ride is finished successfully!</string>

    <string name="thank_you">Thank you for Hoping in</string>
    <string name="ride_finished">ride is finished</string>
    <string name="write_comment">Leave a comment...</string>
    <string name="driver_rating">Driver rating</string>
    <string name="vehicle_rating">Vehicle rating</string>
    <string name="generateReport">generate</string>
    <string name="average">average</string>
    <string name="leaveRating">leave a rating</string>
    <string name="notRated">not rated</string>
    <string name="rateRide">Leave a rating</string>
    <string name="feedback">your feedback matters :)</string>
    <string name="you">You</string>
    <string name="enter_email_for_reset">Please enter your email address to receive a password reset link.</string>
    <string name="reset_password">Reset password</string>
    <string name="week">WEEK</string>
    <string name="newChat">Compose new message</string>
    <string name="composeMessage">Message...</string>
    <string name="emailRecipient">Recipient email...</string>
    <string name="ride">RIDE</string>
    <string name="close">Close</string>
    <string name="dialogAcceptedRideInfo">Ride is accepted. Redirecting to the current ride page.</string>
    <string name="dialogRideNotFoundInfo">Sorry, we didn\'t find proper ride for you. Please, try again later.</string>
    <string name="dialogRideFinishedInfo">You have arrived at your destination. Thank you for HoppingIn.</string>
    <string name="reminder">Reminder</string>
    <string name="your_scheduled_ride_starts_soon">Your scheduled ride starts soon!</string>
    <string name="estimated_time">Estimated time</string>
    <string name="okay">Okay</string>
    <string name="time">Scheduled time:</string>

</resources>
