<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/nav_home"
        android:title="@string/home_nav"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/nav_inbox"
        android:title="@string/inbox_nav"
        android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile_nav"
        android:icon="@drawable/ic_profile"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/nav_history"
        android:title="@string/history_nav"
        android:icon="@drawable/ic_previous_rides"
        app:showAsAction="always"
        />
</menu>