<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingVertical="15dp"
    android:paddingHorizontal="23dp"
    android:orientation="vertical">

        <TextView
            android:id="@+id/forgotPasswordTV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgottenPassword"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppinsbold"
            android:textSize="24sp"
            android:textFontWeight="900"
            android:textColor="@color/dark_blue"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/enterEmailTV"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_email_for_reset"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppinsbold"
            android:textSize="20sp"
            android:textFontWeight="900"
            android:textColor="@color/dark_gray"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/emailET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="25dp"
            android:layout_marginHorizontal="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:background="@drawable/border"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue"
            android:layout_gravity="center"

            android:text="@string/reset_password"
            android:textSize="16sp"
            android:fontFamily="@font/poppinsbold"
            android:textColor="@color/white"
            android:textFontWeight="700"
            android:textAllCaps="false"

            android:layout_marginTop="2dp"
            android:layout_marginHorizontal="5dp"
            android:paddingHorizontal="25sp"
            android:paddingVertical="5sp"
            app:cornerRadius="10dp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            app:srcCompat="@drawable/forgot_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
</LinearLayout>