<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">
                <EditText
                    android:id="@+id/oldPasswordET"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/border_dark"
                    android:fontFamily="@font/poppinsbold"
                    android:hint="@string/oldPassword"
                    android:inputType="textPassword"
                    android:padding="10sp"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/newPasswordET"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/border_dark"
                    android:fontFamily="@font/poppinsbold"
                    android:hint="@string/newPassword"
                    android:inputType="textPassword"
                    android:padding="10sp"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/confirmPasswordET"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/border_dark"
                    android:fontFamily="@font/poppinsbold"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:padding="10sp"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"/>

            </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="45dp"
            android:backgroundTint="@color/solid_blue"
            android:fontFamily="@font/poppinsbold"
            android:paddingHorizontal="35sp"
            android:paddingVertical="10sp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            android:textStyle="bold"/>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>